# yuuki-desktop

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  viewer.py
src/: agent.py  chat_bubble.py  controller.py  prompt.py  screen_worker.py  transcribe_worker.py  vad_worker.py
